trabmain.output
Terminals which are not used

   NAME
   ESPACO
   FIMENTAO
   NUMBER
   PLUS
   MULT
   END


State 16 conflicts: 6 shift/reduce
State 18 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM lines

    2 lines: line
    3      | line lines

    4 line: statement

    5 statement: ENTRADA varlist
    6          | SAIDA varlist
    7          | cmds
    8          | FIM

    9 varlist: id varlist
   10        | id

   11 cmds: cmd cmds
   12     | cmd

   13 @1: /* empty */

   14 cmd: FACA id VEZES @1 cmds FIMFACA

   15 @2: /* empty */

   16 cmd: ENQUANTO id FACA @2 cmds FIMENQUANTO

   17 @3: /* empty */

   18 cmd: SE id ENTAO @3 cmds FIMSE check
   19    | id ASSIGN id
   20    | INC AP id FP
   21    | ZERA AP id FP

   22 @4: /* empty */

   23 check: SENAO @4 cmds FIMSENAO

   24 @5: /* empty */

   25 check: @5 line


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTRADA (258) 5
SAIDA (259) 6
FIM (260) 8
FACA (261) 14 16
VEZES (262) 14
ENQUANTO (263) 16
SE (264) 18
ENTAO (265) 18
SENAO (266) 23
INC (267) 20
ZERA (268) 21
NAME (269)
ESPACO (270)
FIMFACA (271) 14
FIMENTAO (272)
FIMSENAO (273) 23
FIMENQUANTO (274) 16
FIMSE (275) 18
NUMBER (276)
ASSIGN (277) 19
PLUS (278)
AP (279) 20 21
FP (280) 20 21
MULT (281)
END (282)
PROGRAM (283) 1
id (284) 9 10 14 16 18 19 20 21


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1, on right: 0
lines (32)
    on left: 2 3, on right: 1 3
line (33)
    on left: 4, on right: 2 3 25
statement (34)
    on left: 5 6 7 8, on right: 4
varlist (35)
    on left: 9 10, on right: 5 6 9
cmds (36)
    on left: 11 12, on right: 7 11 14 16 18 23
cmd (37)
    on left: 14 16 18 19 20 21, on right: 11 12
@1 (38)
    on left: 13, on right: 14
@2 (39)
    on left: 15, on right: 16
@3 (40)
    on left: 17, on right: 18
check (41)
    on left: 23 25, on right: 18
@4 (42)
    on left: 22, on right: 23
@5 (43)
    on left: 24, on right: 25


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 12
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


state 2

    0 $accept: program . $end

    $end  shift, and go to state 17


state 3

    5 statement: ENTRADA . varlist

    id  shift, and go to state 18

    varlist  go to state 19


state 4

    6 statement: SAIDA . varlist

    id  shift, and go to state 18

    varlist  go to state 20


state 5

    8 statement: FIM .

    $default  reduce using rule 8 (statement)


state 6

   14 cmd: FACA . id VEZES @1 cmds FIMFACA

    id  shift, and go to state 21


state 7

   16 cmd: ENQUANTO . id FACA @2 cmds FIMENQUANTO

    id  shift, and go to state 22


state 8

   18 cmd: SE . id ENTAO @3 cmds FIMSE check

    id  shift, and go to state 23


state 9

   20 cmd: INC . AP id FP

    AP  shift, and go to state 24


state 10

   21 cmd: ZERA . AP id FP

    AP  shift, and go to state 25


state 11

   19 cmd: id . ASSIGN id

    ASSIGN  shift, and go to state 26


state 12

    1 program: PROGRAM lines .

    $default  reduce using rule 1 (program)


state 13

    2 lines: line .
    3      | line . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    $default  reduce using rule 2 (lines)

    lines      go to state 27
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


state 14

    4 line: statement .

    $default  reduce using rule 4 (line)


state 15

    7 statement: cmds .

    $default  reduce using rule 7 (statement)


state 16

   11 cmds: cmd . cmds
   12     | cmd .

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    FACA      [reduce using rule 12 (cmds)]
    ENQUANTO  [reduce using rule 12 (cmds)]
    SE        [reduce using rule 12 (cmds)]
    INC       [reduce using rule 12 (cmds)]
    ZERA      [reduce using rule 12 (cmds)]
    id        [reduce using rule 12 (cmds)]
    $default  reduce using rule 12 (cmds)

    cmds  go to state 28
    cmd   go to state 16


state 17

    0 $accept: program $end .

    $default  accept


state 18

    9 varlist: id . varlist
   10        | id .

    id  shift, and go to state 18

    id        [reduce using rule 10 (varlist)]
    $default  reduce using rule 10 (varlist)

    varlist  go to state 29


state 19

    5 statement: ENTRADA varlist .

    $default  reduce using rule 5 (statement)


state 20

    6 statement: SAIDA varlist .

    $default  reduce using rule 6 (statement)


state 21

   14 cmd: FACA id . VEZES @1 cmds FIMFACA

    VEZES  shift, and go to state 30


state 22

   16 cmd: ENQUANTO id . FACA @2 cmds FIMENQUANTO

    FACA  shift, and go to state 31


state 23

   18 cmd: SE id . ENTAO @3 cmds FIMSE check

    ENTAO  shift, and go to state 32


state 24

   20 cmd: INC AP . id FP

    id  shift, and go to state 33


state 25

   21 cmd: ZERA AP . id FP

    id  shift, and go to state 34


state 26

   19 cmd: id ASSIGN . id

    id  shift, and go to state 35


state 27

    3 lines: line lines .

    $default  reduce using rule 3 (lines)


state 28

   11 cmds: cmd cmds .

    $default  reduce using rule 11 (cmds)


state 29

    9 varlist: id varlist .

    $default  reduce using rule 9 (varlist)


state 30

   14 cmd: FACA id VEZES . @1 cmds FIMFACA

    $default  reduce using rule 13 (@1)

    @1  go to state 36


state 31

   16 cmd: ENQUANTO id FACA . @2 cmds FIMENQUANTO

    $default  reduce using rule 15 (@2)

    @2  go to state 37


state 32

   18 cmd: SE id ENTAO . @3 cmds FIMSE check

    $default  reduce using rule 17 (@3)

    @3  go to state 38


state 33

   20 cmd: INC AP id . FP

    FP  shift, and go to state 39


state 34

   21 cmd: ZERA AP id . FP

    FP  shift, and go to state 40


state 35

   19 cmd: id ASSIGN id .

    $default  reduce using rule 19 (cmd)


state 36

   14 cmd: FACA id VEZES @1 . cmds FIMFACA

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 41
    cmd   go to state 16


state 37

   16 cmd: ENQUANTO id FACA @2 . cmds FIMENQUANTO

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 42
    cmd   go to state 16


state 38

   18 cmd: SE id ENTAO @3 . cmds FIMSE check

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 43
    cmd   go to state 16


state 39

   20 cmd: INC AP id FP .

    $default  reduce using rule 20 (cmd)


state 40

   21 cmd: ZERA AP id FP .

    $default  reduce using rule 21 (cmd)


state 41

   14 cmd: FACA id VEZES @1 cmds . FIMFACA

    FIMFACA  shift, and go to state 44


state 42

   16 cmd: ENQUANTO id FACA @2 cmds . FIMENQUANTO

    FIMENQUANTO  shift, and go to state 45


state 43

   18 cmd: SE id ENTAO @3 cmds . FIMSE check

    FIMSE  shift, and go to state 46


state 44

   14 cmd: FACA id VEZES @1 cmds FIMFACA .

    $default  reduce using rule 14 (cmd)


state 45

   16 cmd: ENQUANTO id FACA @2 cmds FIMENQUANTO .

    $default  reduce using rule 16 (cmd)


state 46

   18 cmd: SE id ENTAO @3 cmds FIMSE . check

    SENAO  shift, and go to state 47

    $default  reduce using rule 24 (@5)

    check  go to state 48
    @5     go to state 49


state 47

   23 check: SENAO . @4 cmds FIMSENAO

    $default  reduce using rule 22 (@4)

    @4  go to state 50


state 48

   18 cmd: SE id ENTAO @3 cmds FIMSE check .

    $default  reduce using rule 18 (cmd)


state 49

   25 check: @5 . line

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    line       go to state 51
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


state 50

   23 check: SENAO @4 . cmds FIMSENAO

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 52
    cmd   go to state 16


state 51

   25 check: @5 line .

    $default  reduce using rule 25 (check)


state 52

   23 check: SENAO @4 cmds . FIMSENAO

    FIMSENAO  shift, and go to state 53


state 53

   23 check: SENAO @4 cmds FIMSENAO .

    $default  reduce using rule 23 (check)
